@@ -9,13 +9,13 @@
 
 package communitycommons.actions;
 
-import java.util.Date;
-import communitycommons.DateTime;
 import com.mendix.systemwideinterfaces.core.IContext;
 import com.mendix.webui.CustomJavaAction;
+import communitycommons.DateTime;
 import communitycommons.Logging;
 import communitycommons.proxies.LogLevel;
 import communitycommons.proxies.LogNodes;
+import java.util.Date;
 
 /**
  * Calculates the number of years between two dates. 
@@ -39,10 +39,10 @@ public class YearsBetween extends CustomJavaAction<java.lang.Long>
 	{
 		// BEGIN USER CODE
 		try {
-			return new Long(DateTime.periodBetween(this.dateTime, compareDate == null ? new Date() : compareDate)
-									.getYears());
+			return Long.valueOf(DateTime.periodBetween(this.dateTime, compareDate == null ? new Date() : compareDate)
+				.getYears());
 		} catch (Exception e) {
-			Logging.log(LogNodes.CommunityCommons.getCaption(), LogLevel.Warning, "DateTime calculation error, returning -1", e);
+			Logging.log(LogNodes.CommunityCommons.name(), LogLevel.Warning, "DateTime calculation error, returning -1", e);
 			return -1L;
 		}
 		// END USER CODE
@@ -58,6 +58,5 @@ public class YearsBetween extends CustomJavaAction<java.lang.Long>
 	}
 
 	// BEGIN EXTRA CODE
-
 	// END EXTRA CODE
 }
